<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">CLEAR</string>
    <string name="backspace">BACKSPACE</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="division">&#0247;</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiplication">&#0215;</string>
    <string name="percentage">%</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="subtraction">-</string>
    <string name="equals">=</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="addition">+</string>
    <string name="sqrt">&#8730;</string>
    <string name="calculation_field">0</string>
    <string name="switch_theme">SWITCH THEME</string>
</resources>