<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/calculation_field"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginTop="100dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:text="@string/calculation_field"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/result_field"/>

    <EditText
        android:id="@+id/result_field"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculation_field"
        app:layout_constraintBottom_toTopOf="@id/button_clear"/>

    <Button
        android:id="@+id/button_clear"
        android:layout_width="195dp"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:text="@string/clear"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/red_copper_dk"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_backspace"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@id/result_field"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_backspace"
        android:layout_width="195dp"
        android:layout_height="75dp"
        android:text="@string/backspace"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/red_copper_dk"
        app:layout_constraintBottom_toTopOf="@id/button_divide"
        app:layout_constraintEnd_toEndOf="@id/button_sqrt"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/button_clear"
        app:layout_constraintTop_toTopOf="@id/button_clear"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:text="@string/_7"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/golden_brown"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_clear"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:text="@string/_8"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/golden_brown"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toTopOf="@id/button_7"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:text="@string/_9"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/golden_brown"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintEnd_toStartOf="@id/button_divide"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintTop_toTopOf="@id/button_8"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:text="@string/division"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/khaki_green"
        app:layout_constraintBottom_toTopOf="@id/button_multiplication"
        app:layout_constraintEnd_toStartOf="@id/button_sqrt"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintTop_toTopOf="@id/button_9"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_sqrt"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="@string/sqrt"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/khaki_green"
        app:layout_constraintBottom_toTopOf="@id/button_percentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_divide"
        app:layout_constraintTop_toTopOf="@id/button_divide"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:text="@string/_4"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/golden_brown"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_7"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:text="@string/_5"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/golden_brown"
        app:layout_constraintBottom_toTopOf="@id/button_2"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toTopOf="@id/button_4"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:text="@string/_6"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/golden_brown"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        app:layout_constraintEnd_toStartOf="@id/button_multiplication"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintTop_toTopOf="@id/button_5"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:text="@string/multiplication"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/khaki_green"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toStartOf="@id/button_percentage"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintTop_toTopOf="@id/button_6"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_percentage"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="@string/percentage"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/khaki_green"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_multiplication"
        app:layout_constraintTop_toTopOf="@id/button_multiplication"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:text="@string/_1"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/golden_brown"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_4"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:text="@string/_2"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/golden_brown"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintTop_toTopOf="@id/button_1"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:text="@string/_3"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/golden_brown"
        app:layout_constraintBottom_toTopOf="@id/button_dot"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintTop_toTopOf="@id/button_2"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:text="@string/subtraction"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/khaki_green"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toStartOf="@id/button_equal"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintTop_toTopOf="@id/button_3"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:text="@string/equals"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/red_copper_dk"
        app:layout_constraintBottom_toBottomOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_minus"
        app:layout_constraintTop_toBottomOf="@id/button_percentage"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:text="@string/_0"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/golden_brown"
        app:layout_constraintEnd_toEndOf="@id/button_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/button_1"
        app:layout_constraintTop_toBottomOf="@id/button_2"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/dot"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/khaki_green"
        app:layout_constraintEnd_toEndOf="@+id/button_3"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/button_3"
        app:layout_constraintTop_toBottomOf="@id/button_3"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/addition"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/khaki_green"
        app:layout_constraintEnd_toEndOf="@id/button_minus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/button_minus"
        app:layout_constraintTop_toBottomOf="@id/button_minus"
        app:layout_constraintVertical_chainStyle="packed" />


</androidx.constraintlayout.widget.ConstraintLayout>